# fabricMedallion

./: README.md  pyproject.toml  requirements.txt
fabricMedallion/: __init__.py
fabricMedallion/architectureDeployments/: __init__.py  create_notebook_definition.py  deploy_orchestrator_notebook.py  deploy_silver_notebooks.py  update_notebook.py  update_notebooks.py
fabricMedallion/datamanagement/: __init__.py  script_as_select.py  standardize_column.py
